--- a/tp-ml-go.ipynb
+++ b/tp-ml-go.ipynb
@@ -480,18 +480,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-03-27 20:26:39.718851: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX_VNNI FMA\n",
+      "2023-03-30 20:57:15.735193: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX_VNNI FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-03-27 20:26:39.798322: I tensorflow/core/util/port.cc:104] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2023-03-27 20:26:39.800383: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
-      "2023-03-27 20:26:39.800393: I tensorflow/compiler/xla/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
-      "2023-03-27 20:26:40.177459: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory\n",
-      "2023-03-27 20:26:40.177517: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory\n",
-      "2023-03-27 20:26:40.177520: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n",
-      "2023-03-27 20:26:41.385906: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory\n",
-      "2023-03-27 20:26:41.385922: W tensorflow/compiler/xla/stream_executor/cuda/cuda_driver.cc:265] failed call to cuInit: UNKNOWN ERROR (303)\n",
-      "2023-03-27 20:26:41.385934: I tensorflow/compiler/xla/stream_executor/cuda/cuda_diagnostics.cc:156] kernel driver does not appear to be running on this host (mael-hp): /proc/driver/nvidia/version does not exist\n",
-      "2023-03-27 20:26:41.386116: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX_VNNI FMA\n",
+      "2023-03-30 20:57:15.839286: I tensorflow/core/util/port.cc:104] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2023-03-30 20:57:15.841952: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2023-03-30 20:57:15.841965: I tensorflow/compiler/xla/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
+      "2023-03-30 20:57:16.429130: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory\n",
+      "2023-03-30 20:57:16.429182: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory\n",
+      "2023-03-30 20:57:16.429186: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n",
+      "2023-03-30 20:57:17.646056: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory\n",
+      "2023-03-30 20:57:17.646083: W tensorflow/compiler/xla/stream_executor/cuda/cuda_driver.cc:265] failed call to cuInit: UNKNOWN ERROR (303)\n",
+      "2023-03-30 20:57:17.646103: I tensorflow/compiler/xla/stream_executor/cuda/cuda_diagnostics.cc:156] kernel driver does not appear to be running on this host (mael-hp): /proc/driver/nvidia/version does not exist\n",
+      "2023-03-30 20:57:17.646338: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX_VNNI FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     },
@@ -500,80 +500,67 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/20\n",
-      "2611/2611 [==============================] - 56s 21ms/step - loss: 0.1146 - accuracy: 0.2358 - val_loss: 0.1099 - val_accuracy: 0.2397\n",
+      "2611/2611 [==============================] - 46s 18ms/step - loss: 0.1093 - accuracy: 0.2399 - val_loss: 0.1045 - val_accuracy: 0.2397\n",
       "Epoch 2/20\n",
-      "2611/2611 [==============================] - 50s 19ms/step - loss: 0.1054 - accuracy: 0.2396 - val_loss: 0.1039 - val_accuracy: 0.2397\n",
+      "2611/2611 [==============================] - 41s 16ms/step - loss: 0.1029 - accuracy: 0.2399 - val_loss: 0.0999 - val_accuracy: 0.2403\n",
       "Epoch 3/20\n",
-      "2611/2611 [==============================] - 49s 19ms/step - loss: 0.1019 - accuracy: 0.2401 - val_loss: 0.1002 - val_accuracy: 0.2398\n",
+      "2611/2611 [==============================] - 41s 16ms/step - loss: 0.0979 - accuracy: 0.2449 - val_loss: 0.0969 - val_accuracy: 0.2444\n",
       "Epoch 4/20\n",
-      "2611/2611 [==============================] - 49s 19ms/step - loss: 0.0990 - accuracy: 0.2428 - val_loss: 0.1008 - val_accuracy: 0.2417\n",
+      "2611/2611 [==============================] - 41s 16ms/step - loss: 0.0937 - accuracy: 0.2516 - val_loss: 0.0955 - val_accuracy: 0.2487\n",
       "Epoch 5/20\n",
-      "2611/2611 [==============================] - 50s 19ms/step - loss: 0.0967 - accuracy: 0.2469 - val_loss: 0.0964 - val_accuracy: 0.2458\n",
+      "2611/2611 [==============================] - 41s 16ms/step - loss: 0.0889 - accuracy: 0.2601 - val_loss: 0.0935 - val_accuracy: 0.2525\n",
       "Epoch 6/20\n",
-      "2611/2611 [==============================] - 50s 19ms/step - loss: 0.0938 - accuracy: 0.2521 - val_loss: 0.0958 - val_accuracy: 0.2463\n",
+      "2611/2611 [==============================] - 41s 16ms/step - loss: 0.0836 - accuracy: 0.2690 - val_loss: 0.0927 - val_accuracy: 0.2551\n",
       "Epoch 7/20\n",
-      "2611/2611 [==============================] - 50s 19ms/step - loss: 0.0908 - accuracy: 0.2577 - val_loss: 0.0977 - val_accuracy: 0.2487\n",
+      "2611/2611 [==============================] - 41s 16ms/step - loss: 0.0783 - accuracy: 0.2766 - val_loss: 0.0928 - val_accuracy: 0.2571\n",
       "Epoch 8/20\n",
-      "2611/2611 [==============================] - 52s 20ms/step - loss: 0.0874 - accuracy: 0.2640 - val_loss: 0.0946 - val_accuracy: 0.2517\n",
+      "2611/2611 [==============================] - 41s 16ms/step - loss: 0.0729 - accuracy: 0.2854 - val_loss: 0.0936 - val_accuracy: 0.2597\n",
       "Epoch 9/20\n",
-      "2611/2611 [==============================] - 50s 19ms/step - loss: 0.0837 - accuracy: 0.2706 - val_loss: 0.0940 - val_accuracy: 0.2527\n",
+      "2611/2611 [==============================] - 42s 16ms/step - loss: 0.0675 - accuracy: 0.2939 - val_loss: 0.0939 - val_accuracy: 0.2620\n",
       "Epoch 10/20\n",
-      "2611/2611 [==============================] - 49s 19ms/step - loss: 0.0800 - accuracy: 0.2767 - val_loss: 0.0932 - val_accuracy: 0.2562\n",
+      "2611/2611 [==============================] - 41s 16ms/step - loss: 0.0632 - accuracy: 0.2994 - val_loss: 0.0953 - val_accuracy: 0.2627\n",
       "Epoch 11/20\n",
-      "2611/2611 [==============================] - 50s 19ms/step - loss: 0.0767 - accuracy: 0.2823 - val_loss: 0.0927 - val_accuracy: 0.2564\n",
+      "2611/2611 [==============================] - 41s 16ms/step - loss: 0.0594 - accuracy: 0.3042 - val_loss: 0.0955 - val_accuracy: 0.2646\n",
       "Epoch 12/20\n",
-      "2611/2611 [==============================] - 49s 19ms/step - loss: 0.0736 - accuracy: 0.2867 - val_loss: 0.0929 - val_accuracy: 0.2594\n",
+      "2611/2611 [==============================] - 41s 16ms/step - loss: 0.0563 - accuracy: 0.3082 - val_loss: 0.0944 - val_accuracy: 0.2668\n",
       "Epoch 13/20\n",
-      "2611/2611 [==============================] - 50s 19ms/step - loss: 0.0709 - accuracy: 0.2904 - val_loss: 0.0911 - val_accuracy: 0.2615\n",
+      "2611/2611 [==============================] - 41s 16ms/step - loss: 0.0531 - accuracy: 0.3117 - val_loss: 0.0954 - val_accuracy: 0.2669\n",
       "Epoch 14/20\n",
-      "2611/2611 [==============================] - 54s 21ms/step - loss: 0.0685 - accuracy: 0.2939 - val_loss: 0.0914 - val_accuracy: 0.2627\n",
+      "2611/2611 [==============================] - 42s 16ms/step - loss: 0.0505 - accuracy: 0.3147 - val_loss: 0.0991 - val_accuracy: 0.2665\n",
       "Epoch 15/20\n",
-      "2611/2611 [==============================] - 50s 19ms/step - loss: 0.0663 - accuracy: 0.2970 - val_loss: 0.0912 - val_accuracy: 0.2640\n",
+      "2611/2611 [==============================] - 41s 16ms/step - loss: 0.0482 - accuracy: 0.3173 - val_loss: 0.0960 - val_accuracy: 0.2700\n",
       "Epoch 16/20\n",
-      "2611/2611 [==============================] - 49s 19ms/step - loss: 0.0642 - accuracy: 0.3001 - val_loss: 0.0930 - val_accuracy: 0.2635\n",
+      "2611/2611 [==============================] - 42s 16ms/step - loss: 0.0460 - accuracy: 0.3197 - val_loss: 0.0954 - val_accuracy: 0.2715\n",
       "Epoch 17/20\n",
-      "2611/2611 [==============================] - 50s 19ms/step - loss: 0.0625 - accuracy: 0.3020 - val_loss: 0.0918 - val_accuracy: 0.2654\n",
+      "2611/2611 [==============================] - 42s 16ms/step - loss: 0.0442 - accuracy: 0.3216 - val_loss: 0.0948 - val_accuracy: 0.2709\n",
       "Epoch 18/20\n",
-      "2611/2611 [==============================] - 50s 19ms/step - loss: 0.0611 - accuracy: 0.3040 - val_loss: 0.0892 - val_accuracy: 0.2672\n",
+      "2611/2611 [==============================] - 41s 16ms/step - loss: 0.0426 - accuracy: 0.3233 - val_loss: 0.0963 - val_accuracy: 0.2721\n",
       "Epoch 19/20\n",
-      "2611/2611 [==============================] - 49s 19ms/step - loss: 0.0597 - accuracy: 0.3061 - val_loss: 0.0914 - val_accuracy: 0.2673\n",
+      "2611/2611 [==============================] - 42s 16ms/step - loss: 0.0409 - accuracy: 0.3249 - val_loss: 0.0965 - val_accuracy: 0.2733\n",
       "Epoch 20/20\n",
-      "2611/2611 [==============================] - 49s 19ms/step - loss: 0.0585 - accuracy: 0.3073 - val_loss: 0.0909 - val_accuracy: 0.2679\n",
+      "2611/2611 [==============================] - 42s 16ms/step - loss: 0.0397 - accuracy: 0.3259 - val_loss: 0.0960 - val_accuracy: 0.2725\n",
       "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " conv2d (Conv2D)             (None, 9, 9, 64)          3264      \n",
-      "                                                                 \n",
-      " batch_normalization (BatchN  (None, 9, 9, 64)         256       \n",
-      " ormalization)                                                   \n",
-      "                                                                 \n",
-      " activation (Activation)     (None, 9, 9, 64)          0         \n",
+      " conv2d (Conv2D)             (None, 9, 9, 64)          12864     \n",
       "                                                                 \n",
       " conv2d_1 (Conv2D)           (None, 9, 9, 32)          51232     \n",
       "                                                                 \n",
-      " batch_normalization_1 (Batc  (None, 9, 9, 32)         128       \n",
-      " hNormalization)                                                 \n",
-      "                                                                 \n",
-      " activation_1 (Activation)   (None, 9, 9, 32)          0         \n",
-      "                                                                 \n",
       " flatten (Flatten)           (None, 2592)              0         \n",
       "                                                                 \n",
-      " dense (Dense)               (None, 128)               331904    \n",
+      " dense (Dense)               (None, 64)                165952    \n",
       "                                                                 \n",
-      " batch_normalization_2 (Batc  (None, 128)              512       \n",
-      " hNormalization)                                                 \n",
+      " dense_1 (Dense)             (None, 10)                650       \n",
       "                                                                 \n",
-      " activation_2 (Activation)   (None, 128)               0         \n",
+      " dropout (Dropout)           (None, 10)                0         \n",
       "                                                                 \n",
-      " dropout (Dropout)           (None, 128)               0         \n",
-      "                                                                 \n",
-      " dense_1 (Dense)             (None, 1)                 129       \n",
+      " dense_2 (Dense)             (None, 1)                 11        \n",
       "                                                                 \n",
       "=================================================================\n",
-      "Total params: 387,425\n",
-      "Trainable params: 386,977\n",
-      "Non-trainable params: 448\n",
+      "Total params: 230,709\n",
+      "Trainable params: 230,709\n",
+      "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
     }
@@ -582,7 +569,7 @@
     "import tensorflow.keras\n",
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import Dense, Dropout, Activation, Flatten\n",
-    "from tensorflow.keras.layers import Conv2D, BatchNormalization\n",
+    "from tensorflow.keras.layers import Conv2D, BatchNormalization, MaxPooling2D\n",
     "import tensorflow.keras.optimizers as optimizers\n",
     "import sklearn.model_selection \n",
     "\n",
@@ -590,25 +577,28 @@
     "\n",
     "model = Sequential([\n",
     "    # First layer : (3, 3) is the size of the filter to apply and the padding is to ensure the height and width dimensions stay the same\n",
-    "    Conv2D(64, (5, 5), padding='same', activation='relu', input_shape=(9,9,2)),\n",
+    "    Conv2D(64, (10, 10), padding='same', activation='relu', input_shape=(9,9,2)),\n",
     "    # This next layer is used to normalize the outputs of the first layer to get 0 mean and unit variance\n",
-    "    BatchNormalization(),\n",
+    "    #BatchNormalization(),\n",
     "    # This layer is to apply the relu activation function on the normalized data we recieve from the BatchNormalization layer\n",
-    "    Activation('relu'),\n",
+    "    #Activation('relu'),\n",
     "    # Second layer of convolution\n",
     "    Conv2D(32, (5, 5), padding='same', activation='relu'),\n",
     "    # Again, we apply a normalization and an activation function\n",
-    "    BatchNormalization(),\n",
-    "    Activation('relu'),\n",
+    "    #BatchNormalization(),\n",
+    "    #Activation('relu'),\n",
     "    # Flatten layer is to convert everything to a 1-D array with a length of height*width\n",
     "    Flatten(),\n",
     "    # We come back to the usual Dense layer\n",
-    "    Dense(128, activation='relu'),\n",
+    "    Dense(64, activation='relu'),\n",
+    "    #BatchNormalization(),\n",
+    "    #Activation('relu'),\n",
+    "    Dense(10, activation='relu'),\n",
     "    # Final time using normalization and activation layer\n",
-    "    BatchNormalization(),\n",
-    "    Activation('relu'),\n",
-    "    # This layer is used to prevent overfitting by dropping a random number of neurons to stop them correlating together\n",
-    "    Dropout(0.5),\n",
+    "    #BatchNormalization(),\n",
+    "    #Activation('relu'),\n",
+    "    # This layer is used to prevent overfitting by dropping a random number of neurons to stop them correlating together,\n",
+    "    Dropout(0.3),\n",
     "    # Final layer to give a final output\n",
     "    Dense(1, activation='sigmoid')\n",
     "])\n",
@@ -631,8 +621,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 81ms/step\n",
-      "[[0.29912552]]\n",
+      "1/1 [==============================] - 0s 47ms/step\n",
+      "[[0.13586406]]\n",
       "0.84\n"
      ]
     }
@@ -742,9 +732,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 14ms/step\n",
-      "1/1 [==============================] - 0s 12ms/step\n",
-      "0.3\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "0.14\n",
       "0.84\n"
      ]
     }
