--- a/tp-ml-go.ipynb
+++ b/tp-ml-go.ipynb
@@ -320,7 +320,7 @@
     "                    mat[i,j][0] = 1\n",
     "\n",
     "        input_matrixes.append(mat)\n",
-    "        output_data.append(d[k]['black_wins'] / d[k]['rollouts'])\n",
+    "        output_data.append([d[k]['black_wins'] / d[k]['rollouts'], d[k]['white_wins'] / d[k]['rollouts']])\n",
     "        \n",
     "        # Add the symmetrical boards to the data\n",
     "        A = input_matrixes[-1]\n",
@@ -448,7 +448,7 @@
       "   [0. 1.]\n",
       "   [0. 0.]\n",
       "   [0. 0.]\n",
-      "   [0. 0.]]]] 0.84\n"
+      "   [0. 0.]]]] [0.84 0.16]\n"
      ]
     }
    ],
@@ -480,18 +480,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-03-30 20:57:15.735193: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX_VNNI FMA\n",
+      "2023-04-05 14:47:41.544618: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX_VNNI FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-03-30 20:57:15.839286: I tensorflow/core/util/port.cc:104] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2023-03-30 20:57:15.841952: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
-      "2023-03-30 20:57:15.841965: I tensorflow/compiler/xla/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
-      "2023-03-30 20:57:16.429130: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory\n",
-      "2023-03-30 20:57:16.429182: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory\n",
-      "2023-03-30 20:57:16.429186: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n",
-      "2023-03-30 20:57:17.646056: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory\n",
-      "2023-03-30 20:57:17.646083: W tensorflow/compiler/xla/stream_executor/cuda/cuda_driver.cc:265] failed call to cuInit: UNKNOWN ERROR (303)\n",
-      "2023-03-30 20:57:17.646103: I tensorflow/compiler/xla/stream_executor/cuda/cuda_diagnostics.cc:156] kernel driver does not appear to be running on this host (mael-hp): /proc/driver/nvidia/version does not exist\n",
-      "2023-03-30 20:57:17.646338: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX_VNNI FMA\n",
+      "2023-04-05 14:47:41.769192: I tensorflow/core/util/port.cc:104] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2023-04-05 14:47:41.795730: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2023-04-05 14:47:41.795739: I tensorflow/compiler/xla/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
+      "2023-04-05 14:47:42.601546: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory\n",
+      "2023-04-05 14:47:42.601591: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory\n",
+      "2023-04-05 14:47:42.601606: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n",
+      "2023-04-05 14:47:43.845021: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory\n",
+      "2023-04-05 14:47:43.845194: W tensorflow/compiler/xla/stream_executor/cuda/cuda_driver.cc:265] failed call to cuInit: UNKNOWN ERROR (303)\n",
+      "2023-04-05 14:47:43.845225: I tensorflow/compiler/xla/stream_executor/cuda/cuda_diagnostics.cc:156] kernel driver does not appear to be running on this host (mael-hp): /proc/driver/nvidia/version does not exist\n",
+      "2023-04-05 14:47:43.846229: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX_VNNI FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     },
@@ -500,45 +500,45 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/20\n",
-      "2611/2611 [==============================] - 46s 18ms/step - loss: 0.1093 - accuracy: 0.2399 - val_loss: 0.1045 - val_accuracy: 0.2397\n",
+      "2611/2611 [==============================] - 52s 19ms/step - loss: 0.1097 - accuracy: 0.7301 - val_loss: 0.1054 - val_accuracy: 0.7303\n",
       "Epoch 2/20\n",
-      "2611/2611 [==============================] - 41s 16ms/step - loss: 0.1029 - accuracy: 0.2399 - val_loss: 0.0999 - val_accuracy: 0.2403\n",
+      "2611/2611 [==============================] - 49s 19ms/step - loss: 0.1029 - accuracy: 0.7302 - val_loss: 0.0985 - val_accuracy: 0.7311\n",
       "Epoch 3/20\n",
-      "2611/2611 [==============================] - 41s 16ms/step - loss: 0.0979 - accuracy: 0.2449 - val_loss: 0.0969 - val_accuracy: 0.2444\n",
+      "2611/2611 [==============================] - 49s 19ms/step - loss: 0.0987 - accuracy: 0.7370 - val_loss: 0.0980 - val_accuracy: 0.7391\n",
       "Epoch 4/20\n",
-      "2611/2611 [==============================] - 41s 16ms/step - loss: 0.0937 - accuracy: 0.2516 - val_loss: 0.0955 - val_accuracy: 0.2487\n",
+      "2611/2611 [==============================] - 51s 19ms/step - loss: 0.0953 - accuracy: 0.7444 - val_loss: 0.0950 - val_accuracy: 0.7451\n",
       "Epoch 5/20\n",
-      "2611/2611 [==============================] - 41s 16ms/step - loss: 0.0889 - accuracy: 0.2601 - val_loss: 0.0935 - val_accuracy: 0.2525\n",
+      "2611/2611 [==============================] - 49s 19ms/step - loss: 0.0918 - accuracy: 0.7529 - val_loss: 0.0936 - val_accuracy: 0.7514\n",
       "Epoch 6/20\n",
-      "2611/2611 [==============================] - 41s 16ms/step - loss: 0.0836 - accuracy: 0.2690 - val_loss: 0.0927 - val_accuracy: 0.2551\n",
+      "2611/2611 [==============================] - 49s 19ms/step - loss: 0.0874 - accuracy: 0.7626 - val_loss: 0.0927 - val_accuracy: 0.7554\n",
       "Epoch 7/20\n",
-      "2611/2611 [==============================] - 41s 16ms/step - loss: 0.0783 - accuracy: 0.2766 - val_loss: 0.0928 - val_accuracy: 0.2571\n",
+      "2611/2611 [==============================] - 49s 19ms/step - loss: 0.0830 - accuracy: 0.7713 - val_loss: 0.0932 - val_accuracy: 0.7583\n",
       "Epoch 8/20\n",
-      "2611/2611 [==============================] - 41s 16ms/step - loss: 0.0729 - accuracy: 0.2854 - val_loss: 0.0936 - val_accuracy: 0.2597\n",
+      "2611/2611 [==============================] - 49s 19ms/step - loss: 0.0784 - accuracy: 0.7792 - val_loss: 0.0922 - val_accuracy: 0.7631\n",
       "Epoch 9/20\n",
-      "2611/2611 [==============================] - 42s 16ms/step - loss: 0.0675 - accuracy: 0.2939 - val_loss: 0.0939 - val_accuracy: 0.2620\n",
+      "2611/2611 [==============================] - 50s 19ms/step - loss: 0.0741 - accuracy: 0.8025 - val_loss: 0.0927 - val_accuracy: 0.7633\n",
       "Epoch 10/20\n",
-      "2611/2611 [==============================] - 41s 16ms/step - loss: 0.0632 - accuracy: 0.2994 - val_loss: 0.0953 - val_accuracy: 0.2627\n",
+      "2611/2611 [==============================] - 49s 19ms/step - loss: 0.0686 - accuracy: 0.8096 - val_loss: 0.0923 - val_accuracy: 0.7664\n",
       "Epoch 11/20\n",
-      "2611/2611 [==============================] - 41s 16ms/step - loss: 0.0594 - accuracy: 0.3042 - val_loss: 0.0955 - val_accuracy: 0.2646\n",
+      "2611/2611 [==============================] - 49s 19ms/step - loss: 0.0647 - accuracy: 0.8172 - val_loss: 0.0939 - val_accuracy: 0.7691\n",
       "Epoch 12/20\n",
-      "2611/2611 [==============================] - 41s 16ms/step - loss: 0.0563 - accuracy: 0.3082 - val_loss: 0.0944 - val_accuracy: 0.2668\n",
+      "2611/2611 [==============================] - 49s 19ms/step - loss: 0.0615 - accuracy: 0.8235 - val_loss: 0.0927 - val_accuracy: 0.7725\n",
       "Epoch 13/20\n",
-      "2611/2611 [==============================] - 41s 16ms/step - loss: 0.0531 - accuracy: 0.3117 - val_loss: 0.0954 - val_accuracy: 0.2669\n",
+      "2611/2611 [==============================] - 49s 19ms/step - loss: 0.0572 - accuracy: 0.8351 - val_loss: 0.0927 - val_accuracy: 0.7760\n",
       "Epoch 14/20\n",
-      "2611/2611 [==============================] - 42s 16ms/step - loss: 0.0505 - accuracy: 0.3147 - val_loss: 0.0991 - val_accuracy: 0.2665\n",
+      "2611/2611 [==============================] - 49s 19ms/step - loss: 0.0540 - accuracy: 0.8411 - val_loss: 0.0937 - val_accuracy: 0.7752\n",
       "Epoch 15/20\n",
-      "2611/2611 [==============================] - 41s 16ms/step - loss: 0.0482 - accuracy: 0.3173 - val_loss: 0.0960 - val_accuracy: 0.2700\n",
+      "2611/2611 [==============================] - 49s 19ms/step - loss: 0.0513 - accuracy: 0.8459 - val_loss: 0.0929 - val_accuracy: 0.7796\n",
       "Epoch 16/20\n",
-      "2611/2611 [==============================] - 42s 16ms/step - loss: 0.0460 - accuracy: 0.3197 - val_loss: 0.0954 - val_accuracy: 0.2715\n",
+      "2611/2611 [==============================] - 49s 19ms/step - loss: 0.0491 - accuracy: 0.8506 - val_loss: 0.0923 - val_accuracy: 0.7797\n",
       "Epoch 17/20\n",
-      "2611/2611 [==============================] - 42s 16ms/step - loss: 0.0442 - accuracy: 0.3216 - val_loss: 0.0948 - val_accuracy: 0.2709\n",
+      "2611/2611 [==============================] - 49s 19ms/step - loss: 0.0464 - accuracy: 0.8557 - val_loss: 0.0936 - val_accuracy: 0.7813\n",
       "Epoch 18/20\n",
-      "2611/2611 [==============================] - 41s 16ms/step - loss: 0.0426 - accuracy: 0.3233 - val_loss: 0.0963 - val_accuracy: 0.2721\n",
+      "2611/2611 [==============================] - 49s 19ms/step - loss: 0.0448 - accuracy: 0.8592 - val_loss: 0.0937 - val_accuracy: 0.7824\n",
       "Epoch 19/20\n",
-      "2611/2611 [==============================] - 42s 16ms/step - loss: 0.0409 - accuracy: 0.3249 - val_loss: 0.0965 - val_accuracy: 0.2733\n",
+      "2611/2611 [==============================] - 49s 19ms/step - loss: 0.0433 - accuracy: 0.8619 - val_loss: 0.0952 - val_accuracy: 0.7811\n",
       "Epoch 20/20\n",
-      "2611/2611 [==============================] - 42s 16ms/step - loss: 0.0397 - accuracy: 0.3259 - val_loss: 0.0960 - val_accuracy: 0.2725\n",
+      "2611/2611 [==============================] - 49s 19ms/step - loss: 0.0418 - accuracy: 0.8647 - val_loss: 0.0953 - val_accuracy: 0.7819\n",
       "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
@@ -555,11 +555,11 @@
       "                                                                 \n",
       " dropout (Dropout)           (None, 10)                0         \n",
       "                                                                 \n",
-      " dense_2 (Dense)             (None, 1)                 11        \n",
+      " dense_2 (Dense)             (None, 2)                 22        \n",
       "                                                                 \n",
       "=================================================================\n",
-      "Total params: 230,709\n",
-      "Trainable params: 230,709\n",
+      "Total params: 230,720\n",
+      "Trainable params: 230,720\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -600,7 +600,7 @@
     "    # This layer is used to prevent overfitting by dropping a random number of neurons to stop them correlating together,\n",
     "    Dropout(0.3),\n",
     "    # Final layer to give a final output\n",
-    "    Dense(1, activation='sigmoid')\n",
+    "    Dense(2, activation='sigmoid')\n",
     "])\n",
     "\n",
     "# Now we compile the model\n",
@@ -621,9 +621,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 47ms/step\n",
-      "[[0.13586406]]\n",
-      "0.84\n"
+      "1/1 [==============================] - 0s 79ms/step\n",
+      "[[0.7712729  0.22864774]]\n",
+      "[0.84 0.16]\n"
      ]
     }
    ],
@@ -732,10 +732,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 11ms/step\n",
-      "1/1 [==============================] - 0s 11ms/step\n",
-      "0.14\n",
-      "0.84\n"
+      "1/1 [==============================] - 0s 12ms/step\n",
+      "1/1 [==============================] - 0s 15ms/step\n",
+      "0.77\n",
+      "[0.84 0.16]\n"
      ]
     }
    ],
