--- a/visualGame.ipynb
+++ b/visualGame.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Legal Moves:  ['B1', 'D1', 'G1', 'H1', 'J1', 'G2', 'H2', 'J2', 'A3', 'C3', 'G3', 'H3', 'J3', 'A4', 'F4', 'G4', 'H4', 'J4', 'A5', 'G5', 'H5', 'J5', 'A6', 'G6', 'H6', 'J6', 'G7', 'H7', 'J7', 'H8', 'J8', 'H9', 'J9', 'PASS']\n",
+      "Legal Moves:  ['B1', 'D1', 'G1', 'H1', 'J1', 'G2', 'H2', 'J2', 'A3', 'G3', 'H3', 'J3', 'A4', 'C3', 'F4', 'G4', 'H4', 'J4', 'A5', 'G5', 'H5', 'J5', 'A6', 'G6', 'H6', 'J6', 'G7', 'H7', 'J7', 'H8', 'J8', 'H9', 'J9', 'PASS']\n",
       "Board Legal Moves for player white\n",
       "[Player 1] GNUGO Legal Moves are  H9 J9 H8 J8 G7 H7 J7 A6 G6 H6 J6 A5 G5 H5 J5 A4 F4 G4 H4 J4 A3 C3 G3 H3 J3 G2 H2 J2 B1 D1 G1 H1 J1\n",
       "[Player 1] I am playing  PASS\n",
@@ -116,7 +116,7 @@
       "[Player 1]   2 O O O O O X . . . 2\n",
       "[Player 1]   1 O . O . O X . . . 1\n",
       "[Player 1]     A B C D E F G H J\n",
-      "[Player 1] hash =  1543065369152696658\n",
+      "[Player 1] hash =  156428884015152375\n",
       "\n",
       "Player  2 Gnugo Player plays: PASS\n",
       "Opponent played  PASS\n",
@@ -142,8 +142,8 @@
       "  2 O O O O O X . . . 2\n",
       "  1 O . O . O X . . . 1\n",
       "    A B C D E F G H J\n",
-      "hash =  719084621951068789\n",
-      "Time: [0.26143622398376465, 0.2973322868347168]\n",
+      "hash =  5412962623236858328\n",
+      "Time: [0.5274908542633057, 0.6362924575805664]\n",
       "GO Score: B+19\n",
       "Winner: BLACK\n"
      ]
@@ -238,7 +238,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
